# aoc-2021

./: CMakeLists.txt
day1/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt  main.cpp
day12/: CMakeLists.txt  main.cpp
day13/: CMakeLists.txt  main.cpp
day14/: CMakeLists.txt  main.cpp
day15/: CMakeLists.txt  main.cpp
day16/: CMakeLists.txt  main.cpp
day17/: CMakeLists.txt  main.cpp
day18/: CMakeLists.txt  main.cpp
day19/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
day20/: CMakeLists.txt  main.cpp
day21/: CMakeLists.txt  main.cpp
day22/: CMakeLists.txt  main.cpp
day23/: CMakeLists.txt  main.cpp
day24/: CMakeLists.txt  day24-notes.txt  main.cpp
day25/: CMakeLists.txt  main.cpp
day3/: CMakeLists.txt  main.cpp
day4/: CMakeLists.txt  main.cpp
day5/: CMakeLists.txt  main.cpp
day6/: CMakeLists.txt  main.cpp
day7/: CMakeLists.txt  main.cpp
day8/: CMakeLists.txt  main.cpp
day9/: CMakeLists.txt  main.cpp
